IN DEVELOPMENT ======= ???

- added: new feature COMPONENTS
- added: new feature MODELS
- added: framework.model(name)
- added: framework.isDebug
- added: framework.isTest
- added: framework.controller(name, definition)
- added: framework.functions
- added: framework.assert(name, callback)
- added: framework.assert(name, url, callback, method, data, headers, xhr)
- added: framework.injectComponent(name, url)
- added: framework.injectModel(name, url)
- added: framework.path.components([filename])
- added: framework.id
- added: controller.model(name)
- added: controller.$model (contains current model)

- updated: framework.usage([detailed])
- updated: BINARY
- updated: WebSocket skips throwing error (ECONNRESET)

- fixed: // char in views and templates
- fixed: assertion testing

improvements: views (in release mode)

- EXAMPLE (NEW): https://github.com/petersirka/total.js/tree/master/examples/components
- EXAMPLE (NEW): https://github.com/petersirka/total.js/tree/master/examples/minimal

======= 1.0.2 (HOTFIX)

- fixed: mail message (problem with diacritics in OUTLOOK)

======= 1.0.1 (HOTFIX)

- added: advanced template conditions

- fixed: builders.prepare()
- fixed: binary (command-line tools)
- fixed: views conditions