@@ -22,6 +22,7 @@ IN DEVELOPMENT ======= ???
 
 - fixed: // char in views and templates
 - fixed: assertion testing
+- fixed: mail attachment (fixed: line too long)
 
 improvements: views (in release mode)
 
